--- a/TrendMedia/New Group/Setting.storyboard
+++ b/TrendMedia/New Group/Setting.storyboard
@@ -43,14 +43,14 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="방해 금지 모드" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="mnu-4W-cex">
-                                                    <rect key="frame" x="78.5" y="13" width="86" height="18"/>
+                                                    <rect key="frame" x="53" y="13" width="86" height="18"/>
                                                     <autoresizingMask key="autoresizingMask"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="Wr5-Ji-QNM">
-                                                    <rect key="frame" x="20" y="0.0" width="43.5" height="43.5"/>
+                                                    <rect key="frame" x="20" y="15" width="18" height="13"/>
                                                     <autoresizingMask key="autoresizingMask"/>
                                                     <color key="tintColor" systemColor="systemPurpleColor"/>
                                                     <imageReference key="image" image="check" symbolScale="large"/>
@@ -222,7 +222,7 @@
         <!--설정-->
         <scene sceneID="mMm-JT-MYr">
             <objects>
-                <tableViewController id="kQw-4U-u57" customClass="SettingModeTableViewController" customModule="TrendMedia" customModuleProvider="target" sceneMemberID="viewController">
+                <tableViewController storyboardIdentifier="SettingModeTableViewController" id="kQw-4U-u57" customClass="SettingModeTableViewController" customModule="TrendMedia" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" id="TR1-ML-1iE">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -251,7 +251,7 @@
     </scenes>
     <resources>
         <image name="bed.double.fill" catalog="system" width="128" height="82"/>
-        <image name="check" width="128" height="128"/>
+        <image name="check" width="18" height="13"/>
         <image name="lanyardcard.fill" catalog="system" width="108" height="128"/>
         <image name="person.fill" catalog="system" width="128" height="120"/>
         <systemColor name="secondaryLabelColor">
